[gd_scene load_steps=4 format=2]

[ext_resource path="res://ebrima.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PatternPad.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 58
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="PatternPad" type="GridContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
columns = 3

[node name="Pad1" type="Control" parent="Main/PatternPad"]
margin_right = 98.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad1"]
modulate = Color( 1, 1, 1, 0.886275 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad2" type="Control" parent="Main/PatternPad"]
margin_left = 102.0
margin_right = 199.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad3" type="Control" parent="Main/PatternPad"]
margin_left = 203.0
margin_right = 300.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad4" type="Control" parent="Main/PatternPad"]
margin_top = 102.0
margin_right = 98.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad4"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad5" type="Control" parent="Main/PatternPad"]
margin_left = 102.0
margin_top = 102.0
margin_right = 199.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad5"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad6" type="Control" parent="Main/PatternPad"]
margin_left = 203.0
margin_top = 102.0
margin_right = 300.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad6"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad7" type="Control" parent="Main/PatternPad"]
margin_top = 203.0
margin_right = 98.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad7"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad8" type="Control" parent="Main/PatternPad"]
margin_left = 102.0
margin_top = 203.0
margin_right = 199.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad8"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Pad9" type="Control" parent="Main/PatternPad"]
margin_left = 203.0
margin_top = 203.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Main/PatternPad/Pad9"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PatternLabel" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.0
margin_top = -109.0
margin_right = 118.0
margin_bottom = -31.0
custom_fonts/font = SubResource( 1 )
